small fix to navbar alignment

--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -12,6 +12,7 @@
 .linksGroup {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 30px;
   margin-right: auto;
   margin-left: auto;
